fixing the layout issue

--- a/src/app/layout/components/top-bar/top-bar.component.scss
+++ b/src/app/layout/components/top-bar/top-bar.component.scss
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%;
     padding: 0 2rem;
-    // background-color: #ffffff;
+    background-color: #ffffff;
     transition: left .2s;
     display: flex;
     align-items: center;
